<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.3"
        android:visibility="gone" />

    <Button
        android:id="@+id/textView_barc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/camera"
        android:textAlignment="center"
        android:textSize="20sp"
        android:onClick="startCamera"
        app:layout_constraintEnd_toStartOf="@+id/editText_barc"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="false"/>

    <EditText
        android:id="@+id/editText_barc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/barcode_label"
        android:inputType="number"
        android:maxLength="13"
        android:nextFocusForward="@id/editText_colli"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:selectAllOnFocus="true" />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="onClickOk"
        android:text="@string/ok_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_barc"
        android:focusable="false"/>

    <TextView
        android:id="@+id/textView_descr"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/descrizione_hint"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_ok"
        android:focusable="false"/>

    <TextView
        android:id="@+id/textView_pzcrt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="15dp"
        android:text="@string/pzxcrt_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_descr"
        android:focusable="false"/>

    <TextView
        android:id="@+id/textView_pz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="100dp"
        android:text="@string/pz_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_descr"
        android:focusable="false"/>

    <TextView
        android:id="@+id/textView_da_ord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="15dp"
        android:text="@string/colli_da_ord_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_pzcrt"
        android:focusable="false"/>

    <EditText
        android:id="@+id/editText_colli"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/colli_label"
        android:inputType="number"
        android:maxLength="4"
        app:layout_constraintStart_toEndOf="@+id/textView_da_ord"
        app:layout_constraintTop_toBottomOf="@+id/textView_pz"
        android:imeOptions="actionSend"
        android:selectAllOnFocus="true" />

    <Button
        android:id="@+id/button_ok_colli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="3dp"
        android:onClick="onClickOkColli"
        android:text="@string/ok_hint"
        app:layout_constraintStart_toEndOf="@+id/editText_colli"
        app:layout_constraintTop_toBottomOf="@+id/textView_pz"
        android:focusable="false"/>

    <ListView
        android:id="@+id/list_ord"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:transcriptMode="normal"
        app:layout_constraintTop_toBottomOf="@id/editText_colli"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>